--- a/index.css
+++ b/index.css
@@ -2,6 +2,7 @@ body {
     background-image: linear-gradient(rgba(28, 41, 81, 0.9), rgba(255, 0, 0, 0.4)), url(Images/background.jpg);
     background-size: cover;
     background-position: center;
+    background-repeat: no-repeat;
 }
 
 
