--- a/index.css
+++ b/index.css
@@ -7,11 +7,13 @@ body {
     background-size: 100% 100%;
     background-position: center;
     background-repeat: no-repeat;
+    font-family: "Cactus Classical Serif", serif;
 }
 
 
+
 h1 {
-    font-size: 3.5vw;
+    font-size: 3.0vw;
     color: rgba(130,200,200,1);
     text-align: center;
     width: 22%;
