--- a/index.css
+++ b/index.css
@@ -21,7 +21,7 @@ h1 {
     text-align: center;
     width: 22%;
     padding-bottom: 5px;
-    border-bottom: 2px solid red;
+    border-bottom: 2px solid white;
     margin: 0px 39%;
     margin-bottom: 10px;
 }
