--- a/hitman.css
+++ b/hitman.css
@@ -11,14 +11,15 @@ h1 {
     color: rgba(0,20,50);
     font-weight: 500;
     font-size: 3vw;
-    margin: 10px 0px;
+    margin-top: 20px;
+    margin-bottom: 0px;
 }
 
 h2 {
     color: rgba(0,20,50);
     font-weight: 300;
     font-size: 2.5vw;
-    margin: 10px 0px;
+    margin: 0px 0px;
 }
 
 ol{
@@ -33,11 +34,44 @@ ul {
 ul li {
     margin-bottom: 3px;
 }
+
 .btn {
     float:left;
     background-color: cyan ;
     border-radius: 10px;
-    border-color: cyan;
+    padding: 5px 10px;
+    border: 2px solid rgba(0,140,155);
+    font-size: 1.3vw;
 }
-    
+
+.btn:hover,
+.btn:active{
+    float:left;
+    background-color: cyan ;
+    border-radius: 10px;
+    padding: 5px 10px;
+    font-size: 1.3vw;
+    background-color: rgba(0,220,235);
+}
+
+a {
+    text-decoration: none;
+    color: rgba(50,50,50);
+    font-family:"Outfit", sans-serif;
+}
+
+@media only screen and (max-width: 700px)
+{
+    .btn {
+    font-size: 2.0vw;
+    }
+
+    .btn:hover,
+    .btn:active{
+        font-size: 2.0vw;
+    }
+    ul {
+    font-size: 2.0vw;
+    }
+}
     
