--- a/index.css
+++ b/index.css
@@ -78,3 +78,16 @@ td {
     border-left: 2px solid rgba(150,150,150,0.8);
     text-align: center;
 }
+
+@media only screen and (max-width: 700px)
+{
+    .btn {
+    font-size: 1.5vw;
+    }
+
+    .btn:hover,
+    .btn:active{
+        font-size: 1.5vw;
+    }
+}
+   
