--- a/index.css
+++ b/index.css
@@ -1,8 +1,9 @@
 html {
-    height: 150%;
+    height: 100%;
+    width: 100%;
 }
 
-body {
+html{
     background-image: linear-gradient(rgba(28, 41, 81, 0.9), rgba(255, 0, 0, 0.4)), url(Images/background.jpg);
     background-size: 100% 100%;
     background-position: center;
@@ -12,7 +13,7 @@ body {
 
 img {
     float: right;
-    height: 75px;
+    width: 15%;
 }
 
 h1 {
@@ -55,6 +56,7 @@ a {
 table {
     width: 80%;
     margin: 20px 10%;
+    font-size: 10px;
 }
 
 
@@ -79,6 +81,8 @@ td {
     text-align: center;
 }
 
+
+
 @media only screen and (max-width: 700px)
 {
     .btn {
@@ -90,4 +94,36 @@ td {
         font-size: 1.5vw;
     }
 }
-   
+
+@media only screen and (max-width: 550px)
+{
+    table {
+        font-size: 7px;
+    }
+}
+ 
+@media only screen and (max-width: 400px)
+{
+    h1{
+        margin-left: 50%;
+        width: 30%;
+    }
+    .btn {
+    font-size: 1.9vw;
+    }
+
+    .btn:hover,
+    .btn:active{
+        font-size: 1.9vw;
+    }
+    table {
+        font-size: 5px;
+    }
+}
+
+@media only screen and (max-width: 300px)
+{
+    table {
+        font-size: 3px;
+    }
+}
