--- a/index.css
+++ b/index.css
@@ -1,10 +1,11 @@
 
 html{
-    background-image: url(Images/background.jpg);
+    background-image: linear-gradient(rgba(28, 41, 81, 0.9), rgba(255, 0, 0, 0.4)), url(Images/background.jpg);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
     font-family: "Cactus Classical Serif", serif;
+    height: 150%
 }
 
 img {
